fixtures/frontend/milestone-1/invalid/cluster_unfinished_gate.aivi
type UserDraft =
  UserDraft Text Text

signal nameText = "Ada"
signal emailText = "ada@example.com"

signal brokenDraft =
 &|> nameText
 &|> emailText
 ?|> .ready
  |> UserDraft
